feat(openapi): create an API to get videos from youtube
refactor old service "fetchVideos"
